After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720382 - dvbsuboverlay: fix reading of display window in display definition segment
dvbsuboverlay: fix reading of display window in display definition segment
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-12-13 10:52 UTC by Benjamin Gaignard
Modified: 2013-12-13 23:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[dvdsuboverlay] fix display definition segment (1.41 KB, patch)
2013-12-13 10:52 UTC, Benjamin Gaignard
committed Details | Review

Description Benjamin Gaignard 2013-12-13 10:52:38 UTC
Created attachment 264132 [details] [review]
[dvdsuboverlay] fix display definition segment

From ETSI EN 300 743 V1.3.1 (2006-11) 7.2.1 Display definition segment specifictations the parameters of display window are in this order: Xmin, Xmax, Ymin, Ymax.
Comment 1 Tim-Philipp Müller 2013-12-13 23:57:21 UTC
Pushed, thanks:

 commit 6cf1f629a34340a2c60871b6940f5b76e27c7e5f
 Author: Benjamin Gaignard <benjamin.gaignard@linaro.org>
 Date:   Fri Dec 13 11:49:52 2013 +0100

    dvbsuboverlay: fix reading of display window in display definition segment
    
    From ETSI EN 300 743 V1.3.1 (2006-11) 7.2.1 Display definition segment specifictations
    the parameters of display window are in this order: Xmin, Xmax, Ymin, Ymax.
    
    Signed-off-by: Benjamin Gaignard <benjamin.gaignard@linaro.org>
    Signed-off-by: Pierre-Yves Mordret <pierre-yves.mordret@st.com>
    
    https://bugzilla.gnome.org/show_bug.cgi?id=720382